--- a/samples/dash-if-reference-player/index.html
+++ b/samples/dash-if-reference-player/index.html
@@ -245,6 +245,7 @@
                     <button class="btn btn-primary" type="button" ng-click="doLoad()">Load</button>
                 </span>
             </div>
+            <input type="text" class="form-control" placeholder="license URL" ng-model="licenseUrl">
         </div>
 
         <div class="row">
